--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_dotenv: ^5.1.0
   convex_bottom_bar: ^3.2.0
-
+  qr_flutter: ^4.1.0
+  clipboard: ^0.1.3
+  share_plus: ^10.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
