--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   timestamp_to_string: ^0.0.1
   step_progress_indicator: ^1.0.2
   primer_progress_bar: ^0.5.0
+  convert: ^3.1.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
